--- a/irrlotcode 2019-11/notebooks/irrlotcode.ipynb
+++ b/irrlotcode 2019-11/notebooks/irrlotcode.ipynb
@@ -44,6 +44,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drop intermediate tables used by this process."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -64,6 +71,13 @@
     "DROP TABLE IF EXISTS dcp.pluto_points, \n",
     "dcp.irrlot_regular, dcp.irrlot_irregular\n",
     "''', cnx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Disaggregate the geometry of potential irregular lots to points."
    ]
   },
   {
@@ -142,6 +156,13 @@
     "sql.execute('''\n",
     "CREATE INDEX pluto_points_geom_idx ON dcp.pluto_points USING GIST (geom);\n",
     "''', cnx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the script to measure and count the angles in each polygon."
    ]
   },
   {
@@ -521,6 +542,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create and load a table of BBLs flagged as irregular"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -567,6 +595,13 @@
     "            \"INSERT INTO dcp.irrlot_irregular VALUES ('{0}')\".format(row[0])\n",
     "        )\n",
     "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Enhance the table with additional PLUTO fields that might be useful"
    ]
   },
   {
@@ -941,6 +976,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bar chart preparation; set font and font sizes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -977,6 +1019,13 @@
     "plt.rc('ytick', labelsize=MEDIUM_SIZE)    # fontsize of the tick labels\n",
     "plt.rc('legend', fontsize=MEDIUM_LARGE_SIZE)    # legend fontsize\n",
     "plt.rc('figure', titlesize=BIGGER_SIZE)  # fontsize of the figure title"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Produce bar chart"
    ]
   },
   {
@@ -1022,6 +1071,13 @@
     "frame = legend.get_frame()\n",
     "frame.set_facecolor('white')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set up and produce leaflet.js map. You may need to rerun cells to see it."
    ]
   },
   {
