--- a/yearbuilt 2019-11/notebooks/yearbuilt.ipynb
+++ b/yearbuilt 2019-11/notebooks/yearbuilt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,6 @@
     "from matplotlib import rcParams\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as tick\n",
-    "import openpyxl\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -745,7 +744,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option('display.max_columns', 999)\n",
     "df_lpc_yrbuilt = pd.read_sql_query('''\n",
     "SELECT *\n",
     "FROM dcp.lpc_yrbuilt;\n",
@@ -756,7 +754,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create an Excel file from the final dataframe"
+    "Create a CSV file from the final dataframe. Freeze the header in Excel, make any other desired formatting changes, and give this to Lynn."
    ]
   },
   {
@@ -765,7 +763,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_lpc_yrbuilt.to_csv(\"../output/YrBuilt LPC Enhanced File.csv\")"
+    "df_lpc_yrbuilt.to_csv(\"../output/YearBuilt_LPC_Enhanced_File.csv\")"
    ]
   },
   {
