use manhattan map

--- a/numfloors 2019-11/notebooks/numfloors_boxplot.ipynb
+++ b/numfloors 2019-11/notebooks/numfloors_boxplot.ipynb
@@ -1587,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1597,17 +1597,17 @@
        "        <iframe\n",
        "            width=\"1000\"\n",
        "            height=\"800\"\n",
-       "            src=\"../html/kepler_queens.html\"\n",
+       "            src=\"../html/kepler_manhattan.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x12add3b50>"
+       "<IPython.lib.display.IFrame at 0x132ed3c50>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
