replace manhattan map with staten island

--- a/numfloors 2019-11/notebooks/numfloors_boxplot.ipynb
+++ b/numfloors 2019-11/notebooks/numfloors_boxplot.ipynb
@@ -1587,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1597,23 +1597,23 @@
        "        <iframe\n",
        "            width=\"1000\"\n",
        "            height=\"800\"\n",
-       "            src=\"../html/kepler_manhattan.html\"\n",
+       "            src=\"../html/kepler_staten_island.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x132ed3c50>"
+       "<IPython.lib.display.IFrame at 0x12add1910>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "IFrame(src='../html/kepler_manhattan.html', width=1000, height=800)"
+    "IFrame(src='../html/kepler_staten_island.html', width=1000, height=800)"
    ]
   },
   {
