add query using bldgclass

--- a/numfloors 2020-03/notebooks/NumFloors from Footprints.ipynb
+++ b/numfloors 2020-03/notebooks/NumFloors from Footprints.ipynb
@@ -1484,6 +1484,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now try setting floor height by building class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(142, 11)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bldgclass_thresh_1 = pd.read_sql_query('''WITH pluto AS (\n",
+    "    SELECT CAST(bbl AS TEXT),\n",
+    "\t\tlanduse,\n",
+    "        bldgclass,\n",
+    "\t\tCAST(numfloors AS NUMERIC) AS numfloors,\n",
+    "\t\tCASE\n",
+    "    \t\tWHEN bldgclass IN ('S3', 'S4', 'S5', 'R1', 'R2', 'R3', 'R4', 'R6') THEN 10\n",
+    "            WHEN SUBSTRING(bldgclass,1,1) IN ('A', 'B', 'C', 'D') THEN 10\n",
+    "\t\t\tELSE 12\n",
+    "\t\tEND AS floor_height,\n",
+    "\t\tnumbldgs,\n",
+    "\t\taddress,\n",
+    "\t\tgeom\n",
+    "\tFROM dcp.pluto201\n",
+    "\tWHERE CAST(numbldgs AS NUMERIC) < 2\n",
+    "\tAND CAST(numfloors AS NUMERIC) > 0\n",
+    "), footprints AS (\n",
+    "    SELECT mpluto_bbl\n",
+    "\tFROM dcp.footprints\n",
+    "\tWHERE CAST(heightroof AS NUMERIC) > 0\n",
+    "\tGROUP BY mpluto_bbl\n",
+    "    HAVING COUNT(*) = 1\n",
+    "), footprints_height AS (\n",
+    "\tSELECT f1.mpluto_bbl,\n",
+    "\tCAST(heightroof AS NUMERIC) as heightroof\n",
+    "\tFROM dcp.footprints f1, footprints f\n",
+    "\tWHERE f1.mpluto_bbl = f.mpluto_bbl\n",
+    "), housing AS (\n",
+    "\tSELECT bbl,\n",
+    "\t\tjob_number,\n",
+    "\t\tjob_type,\n",
+    "\t\tjob_status,\n",
+    "\t\tdate_complete\n",
+    "\tFROM dcp.housing\n",
+    "\tWHERE job_type = 'New Building' AND SUBSTRING(date_complete,1,4) > '2013'\n",
+    "), calc_differential AS (\n",
+    "\tSELECT p.bbl,\n",
+    "\t\tp.landuse,\n",
+    "\t\tp.bldgclass,\n",
+    "\t\tp.address,\n",
+    "\t\tp.numbldgs,\n",
+    "\t\tp.numfloors,\n",
+    "\t\tROUND(f1.heightroof / p.floor_height, 3) AS footprints_floors,\n",
+    "\t\tf1.heightroof,\n",
+    "\t\tp.floor_height,\n",
+    "\t\tABS(p.numfloors - ROUND(f1.heightroof / p.floor_height, 3)) AS differential,\n",
+    "\t\tp.geom\n",
+    "\tFROM pluto p\n",
+    "\tINNER JOIN footprints_height f1\n",
+    "\tON p.bbl = f1.mpluto_bbl\n",
+    "\tWHERE p.bbl NOT IN (SELECT h.bbl FROM housing h)\n",
+    ")\n",
+    "SELECT * FROM calc_differential\n",
+    "WHERE (differential > (1 * numfloors) OR differential > (1 * footprints_floors))\n",
+    "AND (numfloors > 10 OR footprints_floors > 10)\n",
+    "AND SUBSTRING(bldgclass,1,1) NOT IN ('M', 'Q')\n",
+    "ORDER BY bbl;''', cnx)\n",
+    "bldgclass_thresh_1.head(100)\n",
+    "bldgclass_thresh_1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "common = bldgclass_thresh_1.merge(thresh_1,on=['bbl'])\n",
+    "#print(common)\n",
+    "diff = bldgclass_thresh_1[(~bldgclass_thresh_1.bbl.isin(common.bbl))]\n",
+    "diff.shape\n",
+    "diff.to_csv('../output/BldgClass_LandUse_Differences.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
