--- a/yearbuilt 2020-02/notebooks/YearBuilt From Housing.ipynb
+++ b/yearbuilt 2020-02/notebooks/YearBuilt From Housing.ipynb
@@ -503,7 +503,7 @@
    ],
    "source": [
     "with_demolitions = pd.read_sql_query('''WITH new_buildings AS (\n",
-    "\tSELECT CAST(p.bbl AS TEXT) as bbl,\n",
+    "SELECT CAST(p.bbl AS TEXT) as bbl,\n",
     "\tp.address,\n",
     "\tp.yearbuilt,\n",
     "\tp.numbldgs,\n",
@@ -515,10 +515,10 @@
     "\tWHERE job_type = 'New Building'\n",
     "\tAND job_status = 'Complete'\n",
     "\tAND h.date_complete = (SELECT MAX(date_complete)\n",
-    "\t\t\t\t\t   \t\tFROM dcp.housing h1\n",
-    "\t\t\t\t\t   \t\tWHERE h1.bbl = h.bbl\n",
-    "\t\t\t\t\t   \t\tAND h1.job_type = h.job_type\n",
-    "\t\t\t\t\t   \t\tAND h1.job_status = h.job_status)\n",
+    "\t\t\t\t\t\t\tFROM dcp.housing h1\n",
+    "\t\t\t\t\t\t\tWHERE h1.bbl = h.bbl\n",
+    "\t\t\t\t\t\t\tAND h1.job_type = h.job_type\n",
+    "\t\t\t\t\t\t\tAND h1.job_status = h.job_status)\n",
     "\tAND CAST(p.bbl AS TEXT) = h.bbl\n",
     "  AND p.yearbuilt = 0\n",
     "  AND p.numbldgs = 1\n",
@@ -535,10 +535,10 @@
     "\tWHERE h.job_type = 'Demolition'\n",
     "\tAND h.job_status = 'Complete (demolition)'\n",
     "\tAND h.date_filed = (SELECT MAX(h1.date_filed)\n",
-    "\t\t\t\t\t   \t\tFROM dcp.housing h1\n",
-    "\t\t\t\t\t   \t\tWHERE h1.bbl = h.bbl\n",
-    "\t\t\t\t\t   \t\tAND h1.job_type = h.job_type\n",
-    "\t\t\t\t\t   \t\tAND h1.job_status = h.job_status)\n",
+    "\t\t\t\t\t\t\tFROM dcp.housing h1\n",
+    "\t\t\t\t\t\t\tWHERE h1.bbl = h.bbl\n",
+    "\t\t\t\t\t\t\tAND h1.job_type = h.job_type\n",
+    "\t\t\t\t\t\t\tAND h1.job_status = h.job_status)\n",
     "\tAND n.bbl = h.bbl\n",
     ")\n",
     "SELECT n.bbl,\n",
