--- a/numbldgs 2020-03/notebooks/NumBldgs from Building Footprints.ipynb
+++ b/numbldgs 2020-03/notebooks/NumBldgs from Building Footprints.ipynb
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -955,23 +955,23 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>117</td>\n",
-       "      <td>-54</td>\n",
+       "      <td>90</td>\n",
+       "      <td>-128</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>118</td>\n",
-       "      <td>-70</td>\n",
+       "      <td>91</td>\n",
+       "      <td>-80</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>119</td>\n",
-       "      <td>-109</td>\n",
+       "      <td>92</td>\n",
+       "      <td>-48</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>120</td>\n",
-       "      <td>-40</td>\n",
+       "      <td>94</td>\n",
+       "      <td>-196</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -992,16 +992,16 @@
        "3            -2    237\n",
        "4             3    151\n",
        "..          ...    ...\n",
-       "117         -54      1\n",
-       "118         -70      1\n",
-       "119        -109      1\n",
-       "120         -40      1\n",
+       "90         -128      1\n",
+       "91          -80      1\n",
+       "92          -48      1\n",
+       "94         -196      1\n",
        "121         111      1\n",
        "\n",
        "[122 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,17 +1009,36 @@
    "source": [
     "difference_counts = df['difference'].value_counts()\n",
     "difference_dist = pd.DataFrame({'difference':difference_counts.index, 'count':difference_counts.values})\n",
+    "difference_dist.sort_values(by='count', ascending=False, inplace=True)\n",
     "difference_dist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    122.000000\n",
+       "mean     -36.245902\n",
+       "std       64.931281\n",
+       "min     -226.000000\n",
+       "25%      -71.750000\n",
+       "50%      -33.500000\n",
+       "75%       -3.250000\n",
+       "max      277.000000\n",
+       "Name: difference, dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x = difference_dist[\"difference\"].to_numpy()\n",
-    "y = difference_dist[\"count\"].to_numpy()"
+    "difference_dist['difference'].describe()"
    ]
   },
   {
